backend/src/main/java/com/example/sap_shop/error/ShoppingCartDoesNotExistError.java
package com.example.sap_shop.error;

public class ShoppingCartDoesNotExistError extends Exception {
    public ShoppingCartDoesNotExistError(String message) {
        super(message);
    }
}
